Separating columns better visually
Also added title for column numbers

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -148,7 +148,7 @@ Grid
   position: absolute;
   top: 30;
   height: calc(100% - 230px); */
-  padding: 1.5em;
+  /*padding: 1.5em;*/
   padding-top: 90px;
 }
 .step {
@@ -163,7 +163,7 @@ Grid
 .column {
   padding: 1em;
   margin: 8px;
-  /*border: 1px solid orange;*/
+  border-bottom: 1px solid #ADADAD;
 
 }
 .column-header {
@@ -171,6 +171,7 @@ Grid
   line-height: 1em;
   font-weight: bold;
   margin: 5px 0;
+  text-align: center;
 }
 /*
 .column-header::after {
@@ -498,6 +499,7 @@ STEP  1
 ============================================================================= */
 .step-1-data {
   text-align: center;
+  padding: 1.5em;
 }
 
 .step-1-data #file-loader {
