--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -89,7 +89,9 @@ button.reload {
   padding: 0.5em;
 }
 
-
+#file-size-warning {
+  color: #ED4224;
+}
 /* =============================================================================
 Navigation buttons
 ============================================================================= */
