--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -36,6 +36,20 @@
   display: none !important;
 }
 
+.opaque {
+  opacity: 0;
+}
+
+.nonopaque {
+  opacity: 1 !important;
+}
+
+.collapsed {
+  display: none;
+  height: 0px;
+  transition: height 0.2s ease-in-out;
+}
+
 .pass-icon {
   color: #29A03B;
 }
@@ -170,10 +184,10 @@ Grid
 }
 
 .info {
-  line-height: 1.2;
+  line-height: 1.3;
   text-align: center;
-  color: darkgray;
-  padding: 0.5em;
+  color: #858585;
+  padding: 0.8em;
 }
 
 .column,
@@ -210,12 +224,12 @@ Grid
 */
 
 .column .test {
+  position: relative;
   margin: 3px;
 }
 .column .test .summary {
   font-size: 10px;
   line-height: 1.2em;
-  cursor: pointer;
   opacity: 0.8;
 }
 .column .test .summary.interesting {
@@ -223,14 +237,41 @@ Grid
   /*font-weight: bold;*/
   opacity: 1;
 }
-
-.column .test .summary.interesting:hover {
-  color: #ED4224;
-  text-decoration: underline;
+.column .test.filtered .summary {
+  font-weight: bold;
 }
 
-.column .test .description {
-  /*display: none;*/
+.info-btn {
+  cursor: pointer;
+  float: right;
+  margin-right: 0;
+  position: absolute;
+  right: 16px;
+  top: 4px;
+}
+
+.column .test .summary {
+  cursor: pointer;
+}
+
+.filter-btn {
+  cursor: pointer;
+  opacity: 0.25;
+  font-size: 12px;
+  color: #58595B;
+  width: 100%;
+}
+
+.filter-btn:hover {
+  opacity: 1;
+}
+
+.info-wrapper div {
+  font-size: 12px;
+  margin: 10px 25px;
+}
+
+/*.column .test .description {
   padding-left: 1em;
   padding-top: 0.5em;
   font-size: 14px;
@@ -245,7 +286,7 @@ Grid
 }
 .column .test .visualization {
   display: none;
-}
+}*/
 
 
 .column .test.active .description {
@@ -426,6 +467,10 @@ General Suites and test
   bottom: 0px;
   left: 0px;
   opacity: 0.25;
+}
+
+.suite .test .edit-test:hover {
+  opacity: 1;
 }
 
 .suite .test .delete-test {
@@ -777,7 +822,7 @@ STEP  3
 .step-3-results .test {
   line-height: 1.2em;
   /*width: 88%;*/
-  width: 98%;
+  width: 80%;
   display: block;
   margin-left: auto;
   margin-right: auto;
