--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -5,7 +5,7 @@
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: system, -apple-system, ".SFNSDisplay-Regular", "Helvetica Neue", Helvetica, "Segoe UI", sans-serif;
+  font-family: '.SFNSText-Regular', 'SF UI Text', 'Lucida Grande', 'Segoe UI', Ubuntu, Cantarell, sans-serif !important;
   font-size: 16px;
   line-height: 1.4;
   color: #333;
@@ -537,10 +537,6 @@ General Suites and test
   font-size: 12px;
   font-weight: bold;
   font-style: italic;
-}
-.suite .test .test-value {
-  font-weight: bold;
-  font-family; Courier;
 }
 
 .suite .test .fingerprint {
