fix filtered styles with css class "filtered-cells" on "#grid" cc @ejfox

--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -162,6 +162,15 @@ Grid
   display: none;
 }
 
+.filtered-cells .ht_clone_left th .rowHeader {
+  display: none;
+}
+
+.filtered-cells table td {
+  border-right: 1px solid #48C2C5;
+  border-bottom: 1px solid #48C2C5;
+}
+
 .changed {
   background: pink;
 }
