--- a/electron/css/dataproofer.css
+++ b/electron/css/dataproofer.css
@@ -9,6 +9,7 @@
   font-size: 16px;
   line-height: 1.4;
   color: #333;
+  opacity: 1;
   /* background-color: transparent; */
   background-color: #F7F6F5;
   box-sizing: border-box;
@@ -41,13 +42,11 @@
 }
 
 .nonopaque {
-  opacity: 1 !important;
+  opacity: 1;
 }
 
 .collapsed {
   display: none;
-  height: 0px;
-  transition: height 0.2s ease-in-out;
 }
 
 .pass-icon {
@@ -227,6 +226,7 @@ Grid
   line-height: 1em;
   font-weight: bold;
   margin: 5px 0;
+  opacity: 1;
   /*text-align: center;*/
 }
 /*
@@ -257,6 +257,7 @@ Grid
 
 .info-btn {
   cursor: pointer;
+  pointer-events: none;
   float: right;
   margin-right: 0;
   position: absolute;
@@ -445,7 +446,6 @@ General Suites and test
   /*border: 1px solid black;*/
   opacity: 1;
 }
-
 
 .suite .test {
   /*
